if(WITHOUT_TESTS)
  return()
endif()

find_package(Catch2 REQUIRED)

add_executable(tests
    defaults.cpp
    defaults.hpp
    jsonutils.cpp
    jsonutils.hpp
    main.cpp
    mockedmodbuscontext.cpp
    mockedmodbuscontext.hpp
    mockedmqttimpl.cpp
    mockedmqttimpl.hpp
    mockedserver.hpp
    modbus_utils.hpp
    # tests
    converter_name_parser_tests.cpp
    exprconv_float_tests.cpp
    exprconv_int32_tests.cpp
    exprconv_tests.cpp
    modbus_config_tests.cpp
    modbus_executor_tests.cpp
    modbus_executor_single_delay_tests.cpp
    modbus_silence_before_first_poll_tests.cpp
    modbus_silence_before_poll_tests.cpp
    modbus_poll_specification_tests.cpp
    modbus_request_queues_tests.cpp
    modbus_retry_tests.cpp
    modbus_watchdog_tests.cpp
    mqtt_availablility_tests.cpp
    mqtt_command_tests.cpp
    mqtt_command_only_tests.cpp
    mqtt_command_conv_tests.cpp
    mqtt_every_poll_tests.cpp
    mqtt_config_tests.cpp
    mqtt_json_conv_tests.cpp
    mqtt_named_list_conv_tests.cpp
    mqtt_named_list_tests.cpp
    mqtt_named_scalar_conv_tests.cpp
    mqtt_poll_groups_tests.cpp
    mqtt_publish_retain_tests.cpp
    mqtt_publish_type_tests.cpp
    mqtt_refresh_config_tests.cpp
    mqtt_register_default_slave_tests.cpp
    mqtt_register_id_parser_tests.cpp
    mqtt_slave_sets_tests.cpp
    mqtt_state_map_conv_tests.cpp
    mqtt_state_map_tests.cpp
    mqtt_unnamed_list_conv_tests.cpp
    mqtt_unnamed_list_expr_tests.cpp
    mqtt_unnamed_list_tests.cpp
    mqtt_unnamed_scalar_conv_tests.cpp
    mqtt_unnamed_scalar_expr_tests.cpp
    mqtt_unnamed_scalar_tests.cpp
    mqtt_value_tests.cpp
    real_server_tests.cpp
    register_address_tests.cpp
    scheduler_tests.cpp
    single_register_noavail_tests.cpp
    single_register_tests.cpp
    stdconv_bit_tests.cpp
    stdconv_divide_tests.cpp
    stdconv_int8_tests.cpp
    stdconv_int32_tests.cpp
    stdconv_map_tests.cpp
    stdconv_multiply_tests.cpp
    stdconv_float_tests.cpp
    stdconv_string_tests.cpp
    stdconv_tests.cpp
    stdconv_uint32_tests.cpp
    testnumbers.cpp
    testnumbers.hpp
    two_slaves_tests.cpp
    yaml_converters_tests.cpp
)

target_link_libraries(tests
    modmqttsrv
    ${MOSQUITTO_LIBRARIES}
    Catch2::Catch2
    yaml-cpp
    spdlog::spdlog
    fmt::fmt
    ${LIBMODBUS_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
    ${CMAKE_DL_LIBS}
)
